Class Name Changes

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </header>
       <!-- Board -->
-      <main class="boards">
+      <main class="main">
         <div class="empty">
           <p class="empty__text">
             This board is empty. Create a new column to get started.
