Boards List Change

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   class="board"
                 />
                 <p>
-                  <a href="#" class="board-link">Roadmap To Developer</a>
+                  <a href="#" class="board-link">Roadmap</a>
                 </p>
               </li>
 
