Static UI: The Skeleton

--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
           </div>
         </div>
       </aside>
-
       <!-- Header -->
       <header class="header">
         <h2 class="header__heading">Platform Launch</h2>
@@ -136,6 +135,16 @@
             This board is empty. Create a new column to get started.
           </p>
           <button class="btn btn-column">+ Add New Column</button>
+        </div>
+        <!-- Expand Navigation -->
+        <div class="view">
+          <button class="btn btn-toggle-view">
+            <img
+              src="./starter/assets/icon-show-sidebar.svg"
+              alt="Show Sidebar Icon"
+              class="open"
+            />
+          </button>
         </div>
       </main>
     </div>
