Media Queries & Code Cleanup

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                   alt="Board"
                   class="board"
                 />
-                <p><a href="#" class="board-link">Platform Launch</a></p>
+                <p class="list__paragraph">
+                  <a href="#" class="board-link">Platform Launch</a>
+                </p>
               </li>
 
               <li class="list__item">
@@ -59,7 +61,9 @@
                   alt="Board"
                   class="board"
                 />
-                <p><a href="#" class="board-link">Marketing Plan</a></p>
+                <p class="list__paragraph">
+                  <a href="#" class="board-link">Marketing Plan</a>
+                </p>
               </li>
 
               <li class="list__item">
@@ -68,7 +72,7 @@
                   alt="Board"
                   class="board"
                 />
-                <p>
+                <p class="list__paragraph">
                   <a href="#" class="board-link">Roadmap</a>
                 </p>
               </li>
@@ -79,9 +83,11 @@
                   alt="Board"
                   class="board"
                 />
-                <button class="create-board">
-                  <span class="create">+ Create New Board</span>
-                </button>
+                <p class="list__paragraph">
+                  <button class="create-board">
+                    <span class="create">+ New Board</span>
+                  </button>
+                </p>
               </li>
             </ul>
           </div>
