--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -85,7 +85,7 @@
                 />
                 <p class="list__paragraph">
                   <button type="button" class="create-board">
-                    <span class="create">+ New Board</span>
+                    <span class="create">+ Create New Board</span>
                   </button>
                 </p>
               </li>
