--- a/index.html
+++ b/index.html
@@ -44,45 +44,73 @@
           <!-- Board List -->
           <div class="board-list">
             <ul class="list">
-              <li class="list__item">
-                <img
-                  src="./starter/assets/icon-board.svg"
-                  alt="Board"
-                  class="board"
-                />
+              <li class="list__item list__item--active">
+                <!-- Board Icon -->
+                <svg
+                  class="icon-board"
+                  width="16"
+                  height="16"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0 2.889A2.889 2.889 0 0 1 2.889 0H13.11A2.889 2.889 0 0 1 16 2.889V13.11A2.888 2.888 0 0 1 13.111 16H2.89A2.889 2.889 0 0 1 0 13.111V2.89Zm1.333 5.555v4.667c0 .859.697 1.556 1.556 1.556h6.889V8.444H1.333Zm8.445-1.333V1.333h-6.89A1.556 1.556 0 0 0 1.334 2.89V7.11h8.445Zm4.889-1.333H11.11v4.444h3.556V5.778Zm0 5.778H11.11v3.11h2a1.556 1.556 0 0 0 1.556-1.555v-1.555Zm0-7.112V2.89a1.555 1.555 0 0 0-1.556-1.556h-2v3.111h3.556Z"
+                    fill="#828FA3"
+                  />
+                </svg>
                 <p class="list__paragraph">
-                  <a href="#" class="board-link">Platform Launch</a>
+                  <a href="#" class="list-link">Platform Launch</a>
                 </p>
               </li>
 
               <li class="list__item">
-                <img
-                  src="./starter/assets/icon-board.svg"
-                  alt="Board"
-                  class="board"
-                />
+                <!-- Board Icon -->
+                <svg
+                  class="icon-board"
+                  width="16"
+                  height="16"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0 2.889A2.889 2.889 0 0 1 2.889 0H13.11A2.889 2.889 0 0 1 16 2.889V13.11A2.888 2.888 0 0 1 13.111 16H2.89A2.889 2.889 0 0 1 0 13.111V2.89Zm1.333 5.555v4.667c0 .859.697 1.556 1.556 1.556h6.889V8.444H1.333Zm8.445-1.333V1.333h-6.89A1.556 1.556 0 0 0 1.334 2.89V7.11h8.445Zm4.889-1.333H11.11v4.444h3.556V5.778Zm0 5.778H11.11v3.11h2a1.556 1.556 0 0 0 1.556-1.555v-1.555Zm0-7.112V2.89a1.555 1.555 0 0 0-1.556-1.556h-2v3.111h3.556Z"
+                    fill="#828FA3"
+                  />
+                </svg>
                 <p class="list__paragraph">
-                  <a href="#" class="board-link">Marketing Plan</a>
+                  <a href="#" class="list-link">Marketing Plan</a>
                 </p>
               </li>
 
               <li class="list__item">
-                <img
-                  src="./starter/assets/icon-board.svg"
-                  alt="Board"
-                  class="board"
-                />
+                <!-- Board Icon -->
+                <svg
+                  class="icon-board"
+                  width="16"
+                  height="16"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0 2.889A2.889 2.889 0 0 1 2.889 0H13.11A2.889 2.889 0 0 1 16 2.889V13.11A2.888 2.888 0 0 1 13.111 16H2.89A2.889 2.889 0 0 1 0 13.111V2.89Zm1.333 5.555v4.667c0 .859.697 1.556 1.556 1.556h6.889V8.444H1.333Zm8.445-1.333V1.333h-6.89A1.556 1.556 0 0 0 1.334 2.89V7.11h8.445Zm4.889-1.333H11.11v4.444h3.556V5.778Zm0 5.778H11.11v3.11h2a1.556 1.556 0 0 0 1.556-1.555v-1.555Zm0-7.112V2.89a1.555 1.555 0 0 0-1.556-1.556h-2v3.111h3.556Z"
+                    fill="#828FA3"
+                  />
+                </svg>
                 <p class="list__paragraph">
-                  <a href="#" class="board-link">Roadmap</a>
+                  <a href="#" class="list-link">Roadmap</a>
                 </p>
               </li>
 
               <li class="list__item">
-                <img
-                  src="./starter/assets/icon-board create.svg"
-                  alt="Board"
-                  class="board"
-                />
+                <!-- Board Icon: Create -->
+                <svg
+                  class="icon-board--create"
+                  width="16"
+                  height="16"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0 2.889A2.889 2.889 0 0 1 2.889 0H13.11A2.889 2.889 0 0 1 16 2.889V13.11A2.888 2.888 0 0 1 13.111 16H2.89A2.889 2.889 0 0 1 0 13.111V2.89Zm1.333 5.555v4.667c0 .859.697 1.556 1.556 1.556h6.889V8.444H1.333Zm8.445-1.333V1.333h-6.89A1.556 1.556 0 0 0 1.334 2.89V7.11h8.445Zm4.889-1.333H11.11v4.444h3.556V5.778Zm0 5.778H11.11v3.11h2a1.556 1.556 0 0 0 1.556-1.555v-1.555Zm0-7.112V2.89a1.555 1.555 0 0 0-1.556-1.556h-2v3.111h3.556Z"
+                    fill="#635fc7"
+                  />
+                </svg>
                 <p class="list__paragraph">
                   <button type="button" class="create-board">
                     <span class="create">+ Create New Board</span>
