Theme Setting LocalStorage

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
               alt="Light Theme"
               class="light"
             />
-            <input type="checkbox" id="switch" name="theme" />
-            <label for="switch">Toggle</label>
+            <input type="checkbox" id="themeSwitch" name="theme" />
+            <label id="circle" for="themeSwitch">Toggle</label>
             <img
               src="./starter/assets/icon-dark-theme.svg"
               alt="Dark Theme"
