--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
               alt="Light Theme"
               class="light"
             />
-            <input type="checkbox" id="themeSwitch" name="theme" />
-            <label id="circle" for="themeSwitch">Toggle</label>
+            <input
+              class="theme"
+              type="checkbox"
+              id="themeSwitch"
+              name="theme"
+            />
+            <label class="theme-label" id="circle" for="themeSwitch"
+              >Toggle</label
+            >
             <img
               src="./starter/assets/icon-dark-theme.svg"
               alt="Dark Theme"
@@ -125,9 +132,8 @@
       </header>
       <!-- Board -->
       <main class="main">
-        <ul class="column-list">
+        <ul class="boards-list">
           <!-- <div class="empty active">
-            
             <p class="empty__text">
               This board is empty. Create a new column to get started.
             </p>
@@ -148,6 +154,8 @@
           </button>
         </div>
       </main>
+      <!-- Modal Blueprint -->
+      <dialog class="modal" id="modal"></dialog>
     </div>
     <script src="./starter/js/controller.js" type="module"></script>
   </body>
